--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,35 +1,35 @@
 name: Cypress Tests
 
 on: 
-    push:
-    workflow_dispatch:
+  push:
+  workflow_dispatch:
 
 jobs:
   cypress-run:
     runs-on: ubuntu-24.04
     strategy:
-        fail-fast: false
-        matrix:
-            browsers: [chrome, firefox, edge]
+      fail-fast: false
+      matrix:
+        browsers: [chrome, firefox, edge]
+
     steps:
       - name: Checkout
         uses: actions/checkout@v4
-      # Install npm dependencies, cache them correctly
-      # and run all Cypress tests
+
       - name: Cypress run in ${{ matrix.browser }}
         uses: cypress-io/github-action@v6
         with:
-            browsers: ${{ matrix.browser }}
-            command: npx cypress run -browser ${{ matrix.browser }} --reporter mochawesome --reporter-options reportDir=cypress/reports/${{ matrix.browser }}
+          browsers: ${{ matrix.browser }}
+          command: npx cypress run --browser ${{ matrix.browser }} --reporter-options reportDir=cypress/reports/${{ matrix.browser }}
 
       - name: Merge Mochawesome Reports
-      run: npx machawesome-merge cypress/reports/${{ matrix.browser }}/*.json > cypress/reports/${{ matrix.browser }}/merged-reports.json
+        run: npx mochawesome-merge cypress/reports/${{ matrix.browser }}/*.json > cypress/reports/${{ matrix.browser }}/merged-reports.json
 
       - name: Generate HTML Reports
-      run: npx merge cypress/reports/${{ matrix.browser }}/merged-reports.json --reportDir cypress/reports/${{ matrix.browser }} -f "${{ matrix.browser }}-report.html"
+        run: npx marge cypress/reports/${{ matrix.browser }}/merged-reports.json --reportDir cypress/reports/${{ matrix.browser }} -f "${{ matrix.browser }}-report.html"
 
-      - name: upload HTML reports
-      uses: actions/upload-artifact@v4
-      with:
-        name: Cypress HTML Reports ${{ matrix.browser }}
-        path: cypress/reports/${{ matrix.browser }}
+      - name: Upload HTML reports
+        uses: actions/upload-artifact@v4
+        with:
+          name: Cypress HTML Reports ${{ matrix.browser }}
+          path: cypress/reports/${{ matrix.browser }}
