--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "description": "",
   "devDependencies": {
     "cypress": "^15.7.0",
+    "cypress-xpath": "^2.0.1",
     "mochawesome": "^7.1.4",
     "mochawesome-merge": "^5.0.0",
     "mochawesome-report-generator": "^6.3.2"
